--- a/common.css
+++ b/common.css
@@ -262,6 +262,7 @@ a:hover{color:#ee3240;text-decoration: none;}
 .tg-qq .item{width:448px;height:113px; display: flex;align-items:center;padding-left:120px;font-size:24px;font-weight: bold;}
 .tg-qq .tg{background: url("https://img03.mifile.cn/v1/MI_542ED8B1722DC/647a52dd1d86e23a28a080e1af244e26.jpg") no-repeat;}
 .tg-qq .qq{background: url("https://img06.mifile.cn/v1/MI_542ED8B1722DC/b2f83244af8d6aa9ce50a9ed07e3b7c1.jpg") no-repeat;margin-top:50px;}
+.tg-qq .wx{background: url("https://img03.mifile.cn/v1/MI_542ED8B1722DC/b3a17ab6342b67b72127f821a2a2643c.png") no-repeat;margin-top:50px;}
 .tg-qq .item a{color: #fff;display: block;width:100%;height: 100%;line-height: 113px;}
 .tg-qq .item a:hover{color:yellow;}
 
